syntax = "proto3";

option go_package = "./;p2p_api";
import "google/protobuf/empty.proto";

package p2p_api;

message Peer {
  string id = 1;
  string addr = 2;
  string addrLocal = 3;
  string services = 4;
  int64 lastSend = 5;
  int64 lastRecv = 6;
  int64 sendSize = 7;
  int64 recvSize = 8;
  int64 sendMemory = 9;
  bool pauseSend = 10;
  bool unpauseSend = 11;
  uint64 bytesSent = 12;
  uint64 bytesReceived = 13;
  int64 avgRecvBandwidth = 14;
  string assocId = 15;
  string streamPolicy = 16;
  bool inbound = 17;
  int64 connTime = 18;
  int64 pingTime = 19;
  int64 timeOffset = 20;
  uint32 version = 21;
  string subVer = 22;
  int32 startingHeight = 23;
  int32 currentHeight = 24;
  int32 banscore = 25;
  bool whitelisted = 26;
  int64 feeFilter = 27;
  }


  message GetPeersResponse {
    repeated Peer peers = 1;
  }


  message BanPeerRequest {
    string addr = 1;
    int64 until = 2;
}

message BanPeerResponse {
    bool ok = 1;
}

message UnbanPeerRequest {
    string addr = 1;
}

message UnbanPeerResponse {
    bool ok = 1;
}

message IsBannedRequest {
    string ipOrSubnet = 1;
}

message IsBannedResponse {
    bool isBanned = 1;
}

message ListBannedResponse {
    repeated string banned = 1;
}

message ClearBannedResponse {
    bool ok = 1;
}
  
message AddBanScoreRequest {
    string peer_id = 1;
    string reason = 2;
  }

  message AddBanScoreResponse {
    bool ok = 1;
  }

  message ConnectPeerRequest {
    string peer_address = 1; // multiaddr format: /ip4/127.0.0.1/tcp/9005/p2p/12D3KooW...
  }

  message ConnectPeerResponse {
    bool success = 1;
    string error = 2;
  }

  message DisconnectPeerRequest {
    string peer_id = 1; // peer ID to disconnect from
  }

  message DisconnectPeerResponse {
    bool success = 1;
    string error = 2;
  }

  // Catchup metrics reporting messages
  message RecordCatchupAttemptRequest {
    string peer_id = 1;
  }

  message RecordCatchupAttemptResponse {
    bool ok = 1;
  }

  message RecordCatchupSuccessRequest {
    string peer_id = 1;
    int64 duration_ms = 2; // Duration in milliseconds
  }

  message RecordCatchupSuccessResponse {
    bool ok = 1;
  }

  message RecordCatchupFailureRequest {
    string peer_id = 1;
  }

  message RecordCatchupFailureResponse {
    bool ok = 1;
  }

  message RecordCatchupMaliciousRequest {
    string peer_id = 1;
  }

  message RecordCatchupMaliciousResponse {
    bool ok = 1;
  }

  message UpdateCatchupReputationRequest {
    string peer_id = 1;
    double score = 2; // Score between 0-100
  }

  message UpdateCatchupReputationResponse {
    bool ok = 1;
  }

  message GetPeersForCatchupRequest {
    // Empty for now, can add filtering params later
  }

  message PeerInfoForCatchup {
    string id = 1;
    int32 height = 2;
    string block_hash = 3;
    string data_hub_url = 4;
    bool is_healthy = 5;
    double catchup_reputation_score = 6;
    int64 catchup_attempts = 7;
    int64 catchup_successes = 8;
    int64 catchup_failures = 9;
  }

  message GetPeersForCatchupResponse {
    repeated PeerInfoForCatchup peers = 1;
  }

  // Report valid subtree reception
  message ReportValidSubtreeRequest {
    string subtree_hash = 1;
  }

  message ReportValidSubtreeResponse {
    bool success = 1;
    string message = 2;
  }

  // Report valid block reception
  message ReportValidBlockRequest {
    string block_hash = 1;
  }

  message ReportValidBlockResponse {
    bool success = 1;
    string message = 2;
  }

  // Add new service for peer operations
  service PeerService {
    rpc GetPeers(google.protobuf.Empty) returns (GetPeersResponse) {}
    rpc BanPeer(BanPeerRequest) returns (BanPeerResponse) {}
    rpc UnbanPeer(UnbanPeerRequest) returns (UnbanPeerResponse) {}
    rpc IsBanned(IsBannedRequest) returns (IsBannedResponse) {}
    rpc ListBanned(google.protobuf.Empty) returns (ListBannedResponse) {}
    rpc ClearBanned(google.protobuf.Empty) returns (ClearBannedResponse) {}
    rpc AddBanScore(AddBanScoreRequest) returns (AddBanScoreResponse) {}
    rpc ConnectPeer(ConnectPeerRequest) returns (ConnectPeerResponse) {}
    rpc DisconnectPeer(DisconnectPeerRequest) returns (DisconnectPeerResponse) {}

    // Catchup metrics reporting endpoints
    rpc RecordCatchupAttempt(RecordCatchupAttemptRequest) returns (RecordCatchupAttemptResponse) {}
    rpc RecordCatchupSuccess(RecordCatchupSuccessRequest) returns (RecordCatchupSuccessResponse) {}
    rpc RecordCatchupFailure(RecordCatchupFailureRequest) returns (RecordCatchupFailureResponse) {}
    rpc RecordCatchupMalicious(RecordCatchupMaliciousRequest) returns (RecordCatchupMaliciousResponse) {}
    rpc UpdateCatchupReputation(UpdateCatchupReputationRequest) returns (UpdateCatchupReputationResponse) {}
    rpc GetPeersForCatchup(GetPeersForCatchupRequest) returns (GetPeersForCatchupResponse) {}

    // Subtree and block validation reporting
    rpc ReportValidSubtree(ReportValidSubtreeRequest) returns (ReportValidSubtreeResponse) {}
    rpc ReportValidBlock(ReportValidBlockRequest) returns (ReportValidBlockResponse) {}
  }
  